--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
     <title>Insightful</title>
 
@@ -17,11 +16,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <!--<link rel="stylesheet" href="{% static '/css/index.css' %}">-->
     <link rel="stylesheet" href="{% static '/css/styles.css' %}">
   </head>
 
   <body> <!--text-center-->
+    <!-- Bootstrap core JavaScript-->
     <script src="https://cdn.plot.ly/plotly-2.14.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
@@ -30,8 +29,8 @@
     <script>window.jQuery || document.write('<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"><\/script>')</script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Insightful</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand mb-0 h1" href="{% url 'home-page' %}">Insightful</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,13 +38,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'home-page' %}">Home</a>
+            <a class="navbar-brand nav-link" href="{% url 'home-page' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'data-page' %}">Data</a>
+            <a class="navbar-brand nav-link" href="{% url 'data-page' %}">Data</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'plot-page' %}">Plot</a>
+            <a class="navbar-brand nav-link" href="{% url 'plot-page' %}">Plot</a>
           </li>
         </ul>
       </div>
@@ -53,10 +52,7 @@
 
     {% block contents %}
     {% endblock %}
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    
+        
     <script src="{% static '/js/index.js' %}"></script>
   </body>
 </html>
