--- a/templates/data.html
+++ b/templates/data.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
+{% load static %}
 {% block contents %}
-<main role="main-upload" class="container">
+<main role="main-upload" class="container" style="margin-top:8.5rem;">
     <h2>Upload Data</h2>
     <form method="POST" action="upload/" enctype="multipart/form-data"> 
         {% csrf_token %}
@@ -11,7 +12,7 @@
           </div>
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <button type="submit" class="btn btn-primary">Upload</button>
+              <button type="submit" class="btn btn-dark">Upload</button>
               <!--<button class="btn btn btn-success btn-outline-secondary" type="button">Upload</button>-->
             </div>
             <div class="custom-file">
@@ -53,8 +54,8 @@
           <li class="list-group-item">Last Modified: {{ metaData.last_modified }}</li>
         </ul>
          <div class="card-body">
-            <form method="post">{% csrf_token %}
-            <button type="submit" class="btn btn-primary" formaction='' name="download" value="Download" >Download</button>
+            <form id="download">{% csrf_token %}
+            <button type="submit" class="btn btn-dark" name="download" value="{{ metaData.table_name }}" id="downloadButton" >Download</button>
             </form>
          </div>
        </div>
@@ -72,4 +73,7 @@
        
        </div>
 </main>
+{% block javascript %}
+<script src="{% static '/js/download.js' %}"></script>
+{% endblock %}
 {% endblock %}
