--- a/templates/plot.html
+++ b/templates/plot.html
@@ -36,7 +36,7 @@
         </div>
         <div class="form-group row">
           <div class="col-sm-10">
-            <input type="submit" class="btn btn-primary" id="compute" value="Compute">
+            <input type="submit" class="btn btn-dark" id="compute" value="Compute">
           </div>
         </div>
     </form>
@@ -91,7 +91,7 @@
       </div>
         <div class="form-group row">
           <div class="col-sm-10">
-            <input type="submit" class="btn btn-primary" id="plot" value="Plot">
+            <input type="submit" class="btn btn-dark" id="plot" value="Plot">
           </div>
         </div>
     </form>
